test_src/compiler_errors/methods/MethodCallError4.b
class MethodCallError4 {
    void foo(Int value) {
        println(0);
    }
    
    void test() {
        println(foo(1));
    }
}
